 - "hasEntries" matches dictionary containing key-value pairs satisfying a given list of alternating keys and value matchers.

* Added complete descriptions to macros so they appear in Xcode 4 Quick Help. (Couldn't add arguments to macros without breaking backwards compatibility.)

* Improved description of "hasEntry", removing colon so it doesn't get truncated in Xcode's error display.


== Version 1.3 ==

05 Jan 2011
* Improved descriptions and mismatch descriptions of several matchers, including:
  - Fixed "contains" and "containsInAnyOrder" to describe mismatch if item is not a collection.
  - Fixed "describedAs" and "is" to use their nested matchers to generate mismatch descriptions.
  - "sameInstance" is more readable, and includes object memory addresses.
  - If object has a count, "hasCount" mismatch describes actual count.
  - Don't wrap angle brackets around a description that already has them.
  - Improved readability of several matchers.

* "instanceOf" now guards against nil being passed as the expected type.


== Version 1.2 ==

03 Jan 2011
* New matchers:
  - "hasCount" matches collections for which -count satisfies a given matcher.
  - "hasCountOf" matches collections for which -count equals a given count.
  - "empty" matches empty collection.

* Fixed assertThat to describe the diagnosis of the mismatch, not just the mismatched value.

* Expanded helper class HCInvocationMatcher:
  - New property "shortMismatchDescription" determines whether mismatch description is short or long. Default is long description.
  - New method -invokeOn: invokes stored invocation on given item.

* Since nil cannot be directly stored in collections, collection matchers now guard against nil.

* Expanded BaseDescription's -appendDescriptionOf: to handle all types of values, not just self-describing values.

* Deprecated:
  - Description's -appendValue: no longer needed; call -appendDescriptionOf: instead. This also means NSObject+SelfDescribingValue is no longer needed.