@@ -12,6 +12,8 @@ Hamcrest information: http://code.google.com/p/hamcrest/
 
 * Improved description of "hasEntry", removing colon so it doesn't get truncated in Xcode's error display.
 
+* "is" no longer says "is ..." in its description, but just lets the inner description pass through.
+
 
 == Version 1.3 ==
 
